--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- <meta name="facebook-domain-verification" content="d8pj6kv5onh78awe52c62du61xbz3j" /> -->
     <!-- CSRF Token -->
 
-    <title>Techioex - Software Development Company</title>
+    <title>Techioex Technologies is a software development and digital markting agency in Nigeria.</title>
 
   
     <!-- ========== Start Stylesheet ========== -->
