index update again

--- a/index.html
+++ b/index.html
@@ -125,12 +125,15 @@
                         <h1 class="wow fadeInRight d-none" data-wow-defaul="300ms">
                         </h1>
                         <h2 class="wow fadeInRight" data-wow-defaul="300ms">
-                            Thoughtful digital experiences that work.
-                           
+                            Design & Development.
                         </h2>
                         <p class="wow fadeInLeft" data-wow-delay="500ms">
-                            Techioex is a user experience design and development consultancy that helps businesses make complex things simple, through
-                             the application of our passion for technology to create successful products and solutions for our clients.
+                            <!-- Techioex is a user experience design and development consultancy that helps businesses make complex things simple, through
+                             the application of our passion for technology to create successful products and solutions for our clients. -->
+
+                            We design and develop engaging, functional, and beautiful online experiences and solutions that are a clear reflection of your brand.
+
+                             We combine strategic thinking and emerging technologies to provide solutions that consistently break new grounds.
                             <!-- Techioex is a NG-based IT consulting and software development company with Reg. No. 3386936. We transform businesses with
                              powerful and adaptable digital solutions that satisfy the needs of today and unlock the opportunities of tomorrow. -->
                         </p>
@@ -377,26 +380,26 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 item">
                         <div class="fun-fact">
-                            <div class="timer" data-to="687" data-speed="5000">687</div>
+                            <div class="timer" data-to="30" data-speed="5000">30</div>
                             <span class="medium">Projects Completed</span>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 item">
                         <div class="fun-fact">
-                            <div class="timer" data-to="655" data-speed="5000">655</div>
+                            <div class="timer" data-to="20" data-speed="5000">20</div>
                             <span class="medium">Active clients</span>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 item">
                         <div class="fun-fact">
-                            <div class="timer" data-to="450" data-speed="5000">450</div>
+                            <div class="timer" data-to="100" data-speed="5000">100</div>
 
                             <span class="medium">Cups of coffee</span>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 item">
                         <div class="fun-fact">
-                            <div class="timer" data-to="1200" data-speed="5000">1200</div>
+                            <div class="timer" data-to="20" data-speed="5000">20</div>
                             <span class="medium">Happy clients</span>
                         </div>
                     </div>
@@ -549,8 +552,7 @@
                         <div class="f-item about">
                             <img src="logo-white.png" alt="Logo" class="w-25">
                             <p>
-                                Techioex is a NG-based IT consulting and software development 
-                                company with Reg. No. 3386936. We are a team of 10 employees, including technical experts and BAs.
+                                Techioex Technologies is a registered software development and digital markting agency in Nigeria with Reg. No. 3386936. We combine strategic thinking and emerging technologies to provide solutions that consistently break new grounds..
                             </p>
                             <form name="subscription" method="POST" data-netlify="true">
                                 <input type="email" placeholder="Your Email" class="form-control" name="email" required>
@@ -652,7 +654,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>&copy; Copyright 2021. All Rights Reserved by <a href="#">Techioex</a></p>
+                        <p>&copy; Copyright 2022. All Rights Reserved by <a href="#">Techioex</a></p>
                     </div>
                     <div class="col-lg-6 text-right link">
                         <ul>
